--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>N+R Bootstrap</title>
+  <title>Code Life</title>
 
 </head>
 <body>
